--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             </a>
                         </div>
                         <a target="_blank"
-                            href="https://dyorswap.org/home/?chainId=196"
+                            href="https://dyorswap.org/launchInfo/?id=0x7dfA9635b304E817948e34D0926dEe271bf3430E&chainId=196"
                             class="header__button button">
                             <span>BUy now</span>
                             <span>BUy now</span>
@@ -88,7 +88,7 @@
                                 <img src="fonts/dex.svg" alt="X Logo">
                             </a>
                             <a target="_blank"
-                                href="https://dyorswap.org/home/?chainId=196"
+                                href="https://dyorswap.org/launchInfo/?id=0x7dfA9635b304E817948e34D0926dEe271bf3430E&chainId=196"
                                 class="hero__social-item">
                                 <img src="images/favicon.ico" alt="X Logo">
                             </a>
@@ -103,7 +103,7 @@
                             </a>
                         </div>
                         <a target="_blank"
-                            href="https://dyorswap.org/home/?chainId=196"
+                            href="https://dyorswap.org/launchInfo/?id=0x7dfA9635b304E817948e34D0926dEe271bf3430E&chainId=196"
                             class="hero__button button button--large">
                             <span>BUy now</span>
                             <span>BUy now</span>
@@ -273,7 +273,7 @@
                                 </a>
                             </div>
                             <a target="_blank"
-                                href="https://dyorswap.org/home/?chainId=196"
+                                href="https://dyorswap.org/launchInfo/?id=0x7dfA9635b304E817948e34D0926dEe271bf3430E&chainId=196"
                                 class="join__button button button--large">
                                 <span>Buy now</span>
                                 <span>Buy now</span>
@@ -292,7 +292,7 @@
                             <img src="fonts/dex.svg" alt="X Logo">
                         </a>
                         <a target="_blank"
-                            href="https://dyorswap.org/home/?chainId=196"
+                            href="https://dyorswap.org/launchInfo/?id=0x7dfA9635b304E817948e34D0926dEe271bf3430E&chainId=196"
                             class="footer__social-item">
                             <img src="images/favicon.ico" alt="X Logo">
                         </a>
