--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="hero__container">
                     <h1 class="hero__title"><span>XGINNAN</span></h1>
                     <h1 class="hero__text">The very first Deployed <br>Join the OG Revolution!</h1>
-                    <h1 class="hero__text">CA: TBA</h1>
+                    <h1 class="hero__text">CA: 0x7dfA9635b304E817948e34D0926dEe271bf3430E</h1>
                     <br>
                     <div class="hero__actions">
                         <div class="hero__social">
@@ -237,7 +237,7 @@
                             <div class="tokenomics__ca">
                                 <p>Contract</p>
                                 <p>
-                                    <span>TBA</span>
+                                    <span>0x7dfA9635b304E817948e34D0926dEe271bf3430E</span>
                                     <button class="copy-ca-btn">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40"
                                             viewBox="0 0 40 40" fill="none">
